Fix search page spacing

--- a/src/views/public/pages/search/search.page.tns.scss
+++ b/src/views/public/pages/search/search.page.tns.scss
@@ -18,10 +18,8 @@ scroll-view {
     }
 
     & > .expand-compat {
-      margin: rem(1);
-
       & + .expand-compat {
-        margin-top: 0;
+        margin-top: rem(1);
       }
 
       scroll-view {
